--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+
+    <ul>
+        <li><a href="recipes/fish-in-foil.html">Fish in Foil</a></li>
+    </ul>
 </body>
 </html>
