--- a/recipes/fish-in-foil.html
+++ b/recipes/fish-in-foil.html
@@ -7,5 +7,59 @@
 </head>
 <body>
     <h1>Fish in Foil</h1>
+
+    <!-- Image of the recipe -->
+    <img src="../images/fish-in-foil.webp" alt="fish in foil" width="350">
+
+    <!-- Description heading -->
+    <h2>Description</h2>
+
+    <!-- Description paragraph -->
+    <p>
+        Baked fish in foil is a "no-smell" fish recipe, and the only one I make for my family (I hate fish, they love it!). <br>
+        Take foil packets to the table for service, and keep the packets around for wrapping and discarding bones and skin. <br>
+        Then when dinner's done, haul those babies to the outside trash.
+    </p>
+
+
+    <!-- Ingredients heading -->
+    <h2>Ingredients</h2>
+    
+    <!-- Ingredients list(unordered) -->
+    <ul>
+        <li>2 rainbow trout fillets</li>
+        <li>1 tablespoon olive oil</li>
+        <li>2 teaspoons garlic salt</li>
+        <li>1 teaspoons ground black pepper</li>
+        <li>2 sheets heavy-duty aluminum foil</li>
+        <li>1 fresh jalapeno pepper, sliced</li>
+        <li>1 lemon, sliced</li>
+    </ul>
+
+    <!-- Preparation steps heading -->
+    <h2>Instructions</h2>
+
+    <!-- Steps list(ordered) -->
+    <ol>
+        <li>
+            Preheat the oven to 400 degrees F (200 degrees C).
+        </li>
+
+        <li>
+            Rinse and pat fillets dry. Rub fillets with olive oil, and season with garlic salt and black pepper. <br> Place each fillet
+            on a large sheet of aluminum foil. Top with jalapeno slices, and squeeze the juice from the ends of the lemon over
+            fillets. <br> Arrange remaining lemon slices on top of fillets.
+        </li>
+
+        <li>
+            Carefully seal all edges of the foil to form enclosed packets. Place packets on a baking sheet.
+        </li>
+
+        <li>
+            Bake in the preheated oven until fish flakes easily with a fork, 15 to 20 minutes depending on size of fillets.  
+        </li>
+    </ol>
+
+    <a href="/index.html">Back to Index</a>
 </body>
 </html>
