--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <ul>
         <li><a href="recipes/fish-in-foil.html">Fish in Foil</a></li>
+        <li><a href="recipes/mexican-pork-burritos.html">Mexican Pork Burritos</a></li>
+        <li><a href="recipes/ponche-segoviano.html">Ponche Segoviano</a></li>
     </ul>
 </body>
 </html>
