Modify each recipe file
Correction of the link that returns from the recipe page
to the main page.

--- a/recipes/fish-in-foil.html
+++ b/recipes/fish-in-foil.html
@@ -60,6 +60,6 @@
         </li>
     </ol>
 
-    <a href="/index.html">Back to Index</a>
+    <a href="../index.html">Back to Index</a>
 </body>
 </html>
