--- a/recipes/ponche-segoviano.html
+++ b/recipes/ponche-segoviano.html
@@ -104,6 +104,6 @@
             <li>Sprinkle with cinnamon. Cover with the other half, as if making a sandwich, previously moistened with the syrup.</li>            
         </ol>
         
-    <a href="/index.html">Back to Index</a>
+    <a href="../index.html">Back to Index</a>
 </body>
 </html>
